--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/register",
+      "dest": "/api/register"
+    },
+    {
       "src": "/(.*)",
       "dest": "app.js"
     }
