--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.45.5",
+    "argon2": "^0.41.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.1"
